# contradiction-detector

./: NEXT_STEPS.md  README.md  pyproject.toml
blog/: contradictions-in-ml-experiments.md
demo/: README.md  run_demo.sh  sample_results.tsv  sample_results_v2.tsv
src/autoresearch_contradict/: __init__.py  analyzer.py  bench_integration.py  causal.py  cli.py  cross_project.py  detector.py  embedder.py  hypothesis.py  llm_hypothesis.py  memory_integration.py  parser.py  trends.py  visualize.py
src/contradiction_detector/: __init__.py  analyzer.py  bench_integration.py  causal.py  cli.py  cross_project.py  detector.py  hypothesis.py  llm_hypothesis.py  memory_integration.py  trends.py  visualize.py
tests/: test_analyzer.py  test_bench_integration.py  test_causal.py  test_cli.py  test_confidence.py  test_cross_project.py  test_detector.py  test_embedder.py  test_hypothesis.py  test_llm_hypothesis.py  test_memory_integration.py  test_new_categories.py  test_parser.py  test_trends.py  test_visualize.py
