[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-contradict"
version = "0.1.0"
description = "Detect contradictory experiment results and generate hypotheses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
autoresearch-contradict = "autoresearch_contradict.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
